# snare

./: README.md  fix: readme models  pyproject.toml  requirements.txt  vercel.json
NoteBook/: Bivariate_Analysis.ipynb  Deep_Learning_Model.ipynb  Feature_Engineering.ipynb  Logistical Regression.ipynb  RandomForestNotebook.ipynb  UnivariateAnalysis.ipynb  xgboost.ipynb
src/: main.py  snare.py  xgboost_model.json
src/assets/: styles.css
src/helpers/: evaluate_grade.py
src/pages/: page_analysis.py  page_main.py
